idf_component_register(SRCS "main.c"
                            "ble.c"
                            "device_info.c"
                            "spi.c"
                            "pid.c"
                            "heat_controller.c"
                            "heater_calculator.c"
                            "utilities/scheduler.c"
                            "utilities/error.c"
                            "utilities/timer.c"
                    INCLUDE_DIRS "."
                                 "utilities/configs"
                                 "${IDF_PATH}/components/freertos/FreeRTOS-Kernel/include/freertos")
