idf_component_register(SRCS "main.c"
                            "ble.c"
                            "device_info.c"
                            "spi.c"
                            "lcd.c"
                            "pid.c"
                            "encoder.c"
                            "heat_controller.c"
                            "heater_calculator.c"
                            "utilities/scheduler.c"
                            "utilities/error.c"
                            "utilities/timer.c"
                            "lcd1602/lcd1602.c"
                    INCLUDE_DIRS "."
                                 "utilities/configs"
                                 "${IDF_PATH}/components/freertos/FreeRTOS-Kernel/include/freertos")
